--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 name: pingfu
-markdown: redcarpet
 pygments: true
+markdown: redcarpet
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
